<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dpi_type"></string>
    <string name="app_name">水工管理</string>
    <string name="app_name_display">山西万家寨水控水资源有限公司朔州分公司水工管理系统移动终端</string>
    <string name="app_name_display_format">山西万家寨水控水资源有限公司朔州分公司\n水工管理系统移动终端</string>
    <string name="app_name_display_short">水工管理系统</string>
    <string name="app_name_sub"></string>
    <string name="app_name_en"></string>
    <string name="app_versionCode">1</string>
    <string name="app_versionName">0.0.1</string>
    <string name="app_versionBuild">20221117</string>
    <string name="app_dept">山西万家寨水控水资源有限公司</string>
    <string name="app_producter">山西万家寨水控水资源有限公司</string>
    <string name="spliter"> · </string>
    <string name="copyright">山西万家寨水控水资源有限公司</string>
    <string name="copyright_splash">山西万家寨水控水资源有限公司</string>
    <string name="copyright_mark">©</string>
    <string name="devidinfo">本机串号: %1$s</string>
    <string name="default_account_n_password">测试账号：%1$s\t密码：%2$s</string>
    <string name="default_account"></string>
    <string name="default_password"></string>
    <string name="update_type_lastestcode">1</string>
    <string name="update_sppic_lastestcode">1</string>
    <string name="title_url">szsggl.spyatsea.com</string>
    <string name="title_message">消息中心</string>
    <string name="title_baseinfo">信息查询</string>
    <string name="title_editinfo">信息录入</string>
    <string name="title_news">信息服务</string>
    <string name="title_config">设置</string>
    <string name="title_search_result">搜索结果</string>
    <string name="title_switch">切换</string>
    <string name="title_grid_m0">数据同步</string>
    <string name="title_grid_m1">设备识别</string>
    <string name="title_grid_m2">设备检索</string>
    <string name="title_grid_m3">设备巡检</string>
    <string name="title_grid_m4">设备领用</string>
    <string name="title_grid_m5">设备保养</string>
    <string name="title_grid_m6">绑定卡片</string>
    <string name="title_bar_m1">水工巡视</string>
    <string name="title_bar_m2">水工维修</string>
    <string name="title_bar_m3">任务下载</string>
    <string name="title_bar_m4">结果上传</string>
    <string name="title_bar_m5">基础信息同步</string>
    <string name="title_bar_m6">信息查询</string>
    <string name="title_bar_m7">分类规范</string>
    <string name="title_bar_m8">水工资源</string>
    <string name="title_bar_download">数据下载</string>
    <string name="title_bar_upload">数据上传</string>
    <string name="title_bar_scan">请扫描卡片</string>
    <string name="title_scanned_tag">找到新TAG</string>
    <string name="title_scanned_ndef">找到新NDEF</string>
    <string name="title_scanned_tech">找到新TECH</string>
    <string name="title_card_read">读　卡</string>
    <string name="title_card_scan_start">开始扫描</string>
    <string name="title_card_scan_stop">停止扫描</string>
    <string name="title_card_scan_stopping">正在停止</string>
    <string name="title_card_scan_clear">清　空</string>
    <string name="title_jc_new">检查登记</string>
    <string name="title_jc_start">开启检查</string>
    <string name="title_jc_continue">继续检查</string>
    <string name="title_jc_result_yes">正常</string>
    <string name="title_jc_result_no">异常</string>
    <string name="title_jc_result_ignore">忽略</string>
    <string name="title_jc_xq_yes">已消</string>
    <string name="title_jc_xq_no">未消</string>
    <string name="title_jc_xq_blank">——</string>
    <string name="nav_btn_main">首页</string>
    <string name="btn_search">搜索</string>
    <string name="hint_account">请输入登录账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_address">地址</string>
    <string name="hint_thumbnail">缩略图</string>
    <string name="hint_setServer">请输入服务器地址</string>
    <string name="hint_jc_mark_select">请选择或录入区域标识。如果该区域有UHF卡片，请扫卡定位</string>
    <string name="hint_jc_mark_select_areasign">请选择或录入区域标识</string>
    <string name="config">设置</string>
    <string name="baseDataSync">同步基础信息</string>
    <string name="autoDownloadAtta">自动下载附件</string>
    <string name="autoPlayInsAudio">播放巡检声音提示</string>
    <string name="reverseRotate">反向旋转屏幕</string>
    <string name="uhfPowerTitle">UHF天线功率</string>
    <string name="autoDkOverTimeTitle">UHF快签_信息保存间隔（秒）</string>
    <string name="autoDkStayTimeTitle">UHF快签_信息保留时间（秒）</string>
    <string name="uhfKeyCodeTitle">UHF按键设置</string>
    <string name="accountDataSync">同步账号信息</string>
    <string name="config_sysparam">系统参数设置</string>
    <string name="changePwd">修改密码</string>
    <string name="resetDB">复位数据</string>
    <string name="serverAddr">服务器地址</string>
    <string name="setServer">设置服务器地址</string>
    <string name="setLocService">位置信息</string>
    <string name="clearCache">清理缓存</string>
    <string name="resetDBAsk">是否重置所有数据？</string>
    <string name="resetDBInfo">注意：如果重置，当前所有的记录都将被清空！</string>
    <string name="resetDBOk">所有数据已成功重置！</string>
    <string name="clearCacheAsk">是否清理缓存？</string>
    <string name="clearCacheOk">缓存清理成功！</string>
    <string name="clearCacheDetail">已成功清理 %1$s 缓存文件！</string>
    <string name="whetherOpenBluetooth">是否打开蓝牙功能？</string>
    <string name="whetherLogout">是否退出登录？</string>
    <string name="uploadData">数据上传</string>
    <string name="uploadTestData">上传系统错误日志</string>
    <string name="checkUpdate">检查新版本</string>
    <string name="privacy">用户协议及隐私政策</string>
    <string name="downloadOtherApp">下载相关软件</string>
    <string name="attention">注意：</string>
    <string name="help">帮助</string>
    <string name="result_view">结果查询</string>
    <string name="view">查看</string>
    <string name="delete">删除</string>
    <string name="dataMgr">数据管理</string>
    <string name="column">栏目</string>
    <string name="other">其他</string>
    <string name="me">我</string>
    <string name="sample">样例</string>
    <string name="about">关于</string>
    <string name="findUpdate">发现新版本</string>
    <string name="update_prodlg_title">正在下载新版程序</string>
    <string name="whether_update">是否下载并升级？</string>
    <string name="update_vername">版本名称：</string>
    <string name="update_size">大小：</string>
    <string name="update_time">发布时间：</string>
    <string name="system_entry">进入系统</string>
    <string name="system_exit">退出系统</string>
    <string name="exit">退出</string>
    <string name="login">登录</string>
    <string name="login_blank">登　录</string>
    <string name="logout">退出登录</string>
    <string name="logout_blank">退 出 登 录</string>
    <string name="register">注册</string>
    <string name="notlogin">未登录</string>
    <string name="feedback">民生互动</string>
    <string name="message_list">消息列表 </string>
    <string name="message">消息 </string>
    <string name="desc">说明</string>
    <string name="sort">排序</string>
    <string name="total">总计 </string>
    <string name="user_info">用户信息</string>
    <string name="user_realname">姓        名：</string>
    <string name="user_account">帐户名：</string>
    <string name="user_password">密        码：</string>
    <string name="user_password_confirm">确认密码：</string>
    <string name="user_password_old">旧密码：</string>
    <string name="user_password_new">新密码：</string>
    <string name="user_password_new_confirm">确认新密码：</string>
    <string name="user_idsn">身份证号：</string>
    <string name="user_phone">手机号：</string>
    <string name="user_email">电子邮件：</string>
    <string name="user_qq">QQ号：</string>
    <string name="remember_user">  自动登录</string>
    <string name="searching">正在搜索，请稍候…</string>
    <string name="img_infoImg">状态</string>
    <string name="connectsvr">连接服务器</string>
    <string name="upload">上传</string>
    <string name="show_setServer_invalid">请输入有效的服务器地址!</string>
    <string name="tag_hot_keyword">hotKeyword</string>
    <string name="alert_findrecnum">共有 %1$d 条记录</string>
    <string name="alert_findrecnum_page">共有 %1$d 条记录， 第 %2$d 页 / 共 %3$d 页</string>
    <string name="alert_finddwrecnum">共有 %1$d 个单位， %2$d 条记录</string>
    <string name="alert_nofind">找不到符合条件的信息！</string>
    <string name="alert_update">已更新 %1$d 条信息</string>
    <string name="alert_ts">提示</string>
    <string name="alert_askquit">确定要退出程序吗？</string>
    <string name="alert_quited">程序已退出</string>
    <string name="alert_noinfo"></string>
    <string name="alert_save_success">保存成功！</string>
    <string name="alert_save_failed">保存失败！</string>
    <string name="alert_uploading">正在上传…</string>
    <string name="alert_needgps">GPS 未打开</string>
    <string name="alert_needgpsinfo">要获得更精确的位置信息，请打开设备的 GPS 功能和上网(GPRS/3G/WIFI)功能。</string>
    <string name="alert_nouploadrec">没有需要上传的记录</string>
    <string name="alert_uploadinit">正在初始化准备上传的信息…</string>
    <string name="alert_uploadinfo">正在上传：\n【%1$d】 %2$s</string>
    <string name="alert_upload_over">上传完毕</string>
    <string name="alert_upload_success">上传成功！</string>
    <string name="alert_upload_fail">上传失败！</string>
    <string name="alert_download_success">下载成功！</string>
    <string name="alert_download_fail">下载失败！</string>
    <string name="alert_net_conn_success">连接成功！</string>
    <string name="alert_net_conn_fail">无法连接服务器，请检查服务器地址或网络状态！</string>
    <string name="alert_net_appkey_error">本程序无法通过服务器验证，请检查服务器地址！</string>
    <string name="alert_net_format_error">返回结果错误，请检查服务器地址或网络状态！</string>
    <string name="alert_update_islatestver">当前程序已经是最新版本！</string>
    <string name="alert_loc_typeinfo">当前定位方式为：%1$s</string>
    <string name="alert_loc_nolocservice">您的设备没有定位功能。</string>
    <string name="alert_loc_need_net">为准确定位，请打开设备的上网功能(GPRS / 3G / WIFI)。</string>
    <string name="alert_nonet">当前无法连接到网络，请检查！</string>
    <string name="alert_account_blank">请输入账号！</string>
    <string name="alert_password_blank">请输入密码！</string>
    <string name="alert_account_invalid">账号或密码错误，请检查！</string>
    <string name="alert_account_inactive">账号未激活，请联系系统管理员！</string>
    <string name="alert_welcome_user">欢迎您，%1$s。</string>
    <string name="alert_waiting">请稍候…</string>
    <string name="alert_verifying">正在登录，请稍候…</string>
    <string name="alert_card_mac_blank">该卡无效，请重新刷卡！</string>
    <string name="alert_wait_copy_file">正在拷贝数据文件，请稍候…</string>
    <string name="alert_wait_resetDB">正在重置数据库，请稍候…</string>
    <string name="alert_wait_reset_field_data">正在初始化数据，请稍候…</string>
    <string name="alert_delete_success">删除成功！</string>
    <string name="alert_delete_fail">删除失败！</string>
    <string name="alert_update_success">更新成功！</string>
    <string name="alert_update_fail">更新失败！</string>
    <string name="alert_logout_success">注销成功！</string>
    <string name="alert_logout_fail">注销失败！</string>
    <string name="alert_whether_save_info">是否保存信息？</string>
    <string name="alert_whether_upload_info">是否上报信息？</string>
    <string name="alert_check_update">正在检查程序是否有新版本，请稍候…</string>
    <string name="alert_downloading_update">正在下载新版程序，请稍候…</string>
    <string name="alert_connecting_server">正在连接服务器…</string>
    <string name="alert_searchKey">请输入关键字！</string>
    <string name="alert_getMore">正在加载信息…</string>
    <string name="alert_user_not_exists">用户不存在或已经被删除！</string>
    <string name="alert_user_email">请输入有效的电子邮件地址！</string>
    <string name="alert_download_done">下载完毕。</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="voice_play">播放</string>
    <string name="voice_play_blank">　播放　</string>
    <string name="voice_pause">暂停</string>
    <string name="voice_pause_blank">　暂停　</string>
    <string name="voice_stop">停止</string>
    <string name="info_loc_type">定位方式：</string>
    <string name="info_loc_lat">纬度：</string>
    <string name="info_loc_lon">经度：</string>
    <string name="btn_url_upload_default_in">内网</string>
    <string name="btn_url_upload_default_out">外网</string>
    <string name="btn_url_upload_testnet">测试</string>
    <string name="btn_loc_map">查看地图</string>
    <string name="ins_title_atta_filename">附件名称：</string>
    <string name="ins_title_atta_filetype">附件类型：</string>
    <string name="ins_title_atta_duration">附件长度：</string>
    <string name="ins_title_atta_filesize">附件大小：</string>
    <string name="ins_title_atta_createdtime">创建日期：</string>
</resources>