<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_loc_type"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loc_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_blue_light"
            android:textSize="16sp" />

        <Button
            android:id="@+id/locMapBtn"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/dl_button_bg_blue_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_loc_map"
            android:textColor="@color/solid_plain"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_loc_lat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loc_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_blue_light"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_loc_lon"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loc_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_blue_light"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>