<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/solid_plain"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/atta_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gallery_selected_default"
            android:contentDescription="@string/hint_thumbnail"
            android:paddingBottom="13dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:paddingTop="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top|right"
                android:text="@string/ins_title_atta_filename"
                android:textColor="@color/solid_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/atta_filename"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|left"
                android:textColor="@color/text_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top|right"
                android:text="@string/ins_title_atta_filetype"
                android:textColor="@color/solid_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/atta_filetype"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|left"
                android:textColor="@color/text_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/atta_duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top|right"
                android:text="@string/ins_title_atta_duration"
                android:textColor="@color/solid_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/atta_duration"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|left"
                android:textColor="@color/text_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top|right"
                android:text="@string/ins_title_atta_filesize"
                android:textColor="@color/solid_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/atta_filesize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|left"
                android:textColor="@color/text_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top|right"
                android:text="@string/ins_title_atta_createdtime"
                android:textColor="@color/solid_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/atta_createdtime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|left"
                android:textColor="@color/text_blue"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>