<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/title_bar_layout"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/title_bar_layout_height"
    android:background="@color/title_bar_backgroud_color" >

    <Button
        android:id="@id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="5.0dip"
        android:background="@color/transparent"
        android:gravity="center"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/cancel"
        android:textColor="@color/solid_plain"
        android:textSize="@dimen/app_title_font_size_small_btn"
        android:textStyle="normal"
        android:visibility="visible" />

    <TextView
        android:id="@id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/title_bar_button_width"
        android:layout_marginRight="70.0dip"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/title_bar_title_color"
        android:textSize="@dimen/app_title_font_size_small" />

    <Button
        android:id="@id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginRight="5.0dip"
        android:background="@color/transparent"
        android:gravity="center"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/submit"
        android:textColor="@color/solid_plain"
        android:textSize="@dimen/app_title_font_size_small_btn"
        android:textStyle="normal"
        android:visibility="visible" />

    <View
        android:id="@id/viewHeaderDivider"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_alignParentBottom="true"
        android:background="@color/title_bar_bottom_divider_color"
        android:visibility="gone" />

</RelativeLayout>